--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,23 @@
+annotated-types==0.5.0
 beautifulsoup4==4.12.2
+black==23.7.0
+click==8.1.7
 cmake==3.27.2
 dataclasses==0.6
 google==3.0.0
 grpcio==1.57.0
 grpcio-tools==1.57.0
+isort==5.12.0
 kiwipiepy==0.15.2
 kiwipiepy-model==0.15.0
+mypy-extensions==1.0.0
 numpy==1.25.2
-protobuf==4.24.0
+packaging==23.1
+pathspec==0.11.2
+platformdirs==3.10.0
+protobuf==4.24.1
+pydantic==2.2.1
+pydantic_core==2.6.1
 soupsieve==2.4.1
 tqdm==4.66.1
+typing_extensions==4.7.1
