--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 annotated-types==0.5.0
+anyio==3.7.1
 beautifulsoup4==4.12.2
 black==23.7.0
 click==8.1.7
 cmake==3.27.2
 dataclasses==0.6
-google==3.0.0
-grpcio==1.57.0
-grpcio-tools==1.57.0
+fastapi==0.101.1
+h11==0.14.0
+httptools==0.6.0
+idna==3.4
 isort==5.12.0
 kiwipiepy==0.15.2
 kiwipiepy-model==0.15.0
@@ -18,6 +20,14 @@ platformdirs==3.10.0
 protobuf==4.24.1
 pydantic==2.2.1
 pydantic_core==2.6.1
+python-dotenv==1.0.0
+PyYAML==6.0.1
+sniffio==1.3.0
 soupsieve==2.4.1
+starlette==0.27.0
 tqdm==4.66.1
 typing_extensions==4.7.1
+uvicorn==0.23.2
+uvloop==0.17.0
+watchfiles==0.19.0
+websockets==11.0.3
